--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
 <div class="big1">
-<a href="https://akua66.github.io/Ekken_Shooting_1.1.3/" target="_blank">ツイート</a>
+<a href="https://akua66.github.io/tweet_intent_image_test/" target="_blank">ツイート</a>
 </div>
   </body>
 </html>
