--- a/index.html
+++ b/index.html
@@ -22,7 +22,16 @@
 
 <body>
 <div class="big1">
-<a href="https://akua66.github.io/tweet_intent_image_test/" target="_blank">ツイート</a>
-</div>
+<a href="https://twitter.com/intent/tweet?hashtags=%E8%AC%81%E8%A6%8B&url=https%3A%2F%2Fakua66.github.io%2ftweet_intent_image_test%2f&text=%E4%BD%95%E3%81%93%E3%81%AE%E9%80%9A%E8%A9%B1%E5%B1%A5%E6%AD%B4...%0D%0A%E8%AC%81%E8%A6%8B%E3%81%A3%E3%81%A6%E5%AD%90%E3%81%AD...%E8%A8%B1%E3%81%95%E3%81%AA%E3%81%84+pic.twitter.com%2f4W08xFaLUu" target="_blank">ツイート</a>
+<!--
+#謁見
+
+何この通話履歴...
+謁見って子ね...許さない
+
+-->
+  
+  
+  </div>
   </body>
 </html>
