--- a/index.html
+++ b/index.html
@@ -21,10 +21,27 @@
   </head>
 
 <body>
-  <div class="big1">
-  <button onclick="location.href=https://twitter.com/intent/tweet?hashtags=%E8%AC%81%E8%A6%8B&url=https%3A%2F%2Fakua66.github.io%2ftweet_intent_image_test%2f&text=%E4%BD%95%E3%81%93%E3%81%AE%E9%80%9A%E8%A9%B1%E5%B1%A5%E6%AD%B4...%0D%0A%E8%AC%81%E8%A6%8B%E3%81%A3%E3%81%A6%E5%AD%90%E3%81%AD...%E8%A8%B1%E3%81%95%E3%81%AA%E3%81%84%0D%0A+pic.twitter.com%2f4W08xFaLUu%0D%0A+%E5%BE%A9%E8%AE%90%E3%81%AF%E3%81%93%E3%81%A1%E3%82%89%E3%81%8B%E3%82%89%E2%86%93%0D%0A">復讐する</button>
-
+  <div style="margin-left:10%;margin-right:10%;font-family: 'ヒラギノ丸ゴ ProN','Hiragino Maru Gothic ProN','Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3','Meiryo UI',sans-serif;">
+ <input onclick="location.href=https://twitter.com/intent/
+                   tweet?hashtags=%E8%AC%81%E8%A6%8B&url=
+                   https%3A%2F%2Fakua66.github.io%2ftweet_intent_image_test%2f
+                   &text=%E4%BD%95%E3%81%93%E3%81%AE%E9%80%9A%E8%A9%B1%E5%B1%A5%E6%AD%B4...
+                   %0D%0A%E8%AC%81%E8%A6%8B%E3%81%A3%E3%81%A6%E5%AD%90%E3%81%AD...
+                   %E8%A8%B1%E3%81%95%E3%81%AA%E3%81%84%0D%0A+
+                   pic.twitter.com%2f4W08xFaLUu%0D%0A+%E5%BE%A9%E8%AE%90%E3%81%AF%E3%81%93%E3%81%A1%E3%82%89%E3%81%8B%E3%82%89%E2%86%93%0D%0A"
+        type="button" style="width:100%;padding:10px;font-size:30px;" value="復讐する" />
+ </div>
   <!--
+  <div class="big1">
+  <button onclick="location.href=https://twitter.com/intent/
+                   tweet?hashtags=%E8%AC%81%E8%A6%8B&url=
+                   https%3A%2F%2Fakua66.github.io%2ftweet_intent_image_test%2f
+                   &text=%E4%BD%95%E3%81%93%E3%81%AE%E9%80%9A%E8%A9%B1%E5%B1%A5%E6%AD%B4...
+                   %0D%0A%E8%AC%81%E8%A6%8B%E3%81%A3%E3%81%A6%E5%AD%90%E3%81%AD...
+                   %E8%A8%B1%E3%81%95%E3%81%AA%E3%81%84%0D%0A+
+                   pic.twitter.com%2f4W08xFaLUu%0D%0A+%E5%BE%A9%E8%AE%90%E3%81%AF%E3%81%93%E3%81%A1%E3%82%89%E3%81%8B%E3%82%89%E2%86%93%0D%0A">復讐する</button>
+
+ 
 <a href="https://twitter.com/intent/tweet?hashtags=%E8%AC%81%E8%A6%8B&url=https%3A%2F%2Fakua66.github.io%2ftweet_intent_image_test%2f&text=%E4%BD%95%E3%81%93%E3%81%AE%E9%80%9A%E8%A9%B1%E5%B1%A5%E6%AD%B4...%0D%0A%E8%AC%81%E8%A6%8B%E3%81%A3%E3%81%A6%E5%AD%90%E3%81%AD...%E8%A8%B1%E3%81%95%E3%81%AA%E3%81%84%0D%0A+pic.twitter.com%2f4W08xFaLUu%0D%0A+復讐はこちらから↓%0D%0A" target="_blank">ツイート</a>
 
 #謁見
@@ -34,9 +51,10 @@
 
 改行
 %0D%0A
--->
+
   
   
   </div>
+-->
   </body>
 </html>
